# code-hacker

./: .gitignore  AGENTS.md  LICENSE  README.md  code-hacker.agent.md  code-hacker.chatmode.md  code_intel.py  code_refactor.py  code_review.py  codehacker  filesystem.py  git_tools.py  install.ps1  install.sh  memory_store.py  memory_web.py  mermaid_chart.py  multi_project.py  pyproject.toml  start_servers.sh  stop_servers.ps1  subagents.yaml  tui_app.py  web_app.py
.claude/skills/: code-review.md  mcp-server.md  multi-project.md  run-tests.md  ydiff-review.md
static/: index.html
tests/: conftest.py  test_memory_workflow.py  test_refactor_commit.py  test_scenarios.py
